--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
-{ 
-  "type": "module",
-  "name": "full-stack-practice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend/server.js",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
-  }
+{
+    "type": "module",
+    "name": "full-stack-practice",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon BACKEND/server.js",
+        "start": "node server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.6",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
+        "mongodb": "^7.0.0",
+        "mongoose": "^9.1.5"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.11"
+    }
 }
